Change from lists to object orientated

--- a/DestinationUnknownLibrary/DestinationUnknownLibrary.csproj
+++ b/DestinationUnknownLibrary/DestinationUnknownLibrary.csproj
@@ -41,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CatchCorrections.cs" />
     <Compile Include="Combat.cs" />
-    <Compile Include="LoadGame.cs" />
+    <Compile Include="Load.cs" />
+    <Compile Include="World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
